# clang-plugin

./: CMakeLists.txt  README.md  main_code.cc
tests/: test1.cpp  test2.cpp  test3.cpp
